--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,20 +1,19 @@
-
 // Body
-$body-bg: #f8fafc;
-
+$body-bg: #b8bdbb;
 // Typography
-$font-family-sans-serif: "Nunito", sans-serif;
+$font-family-sans-serif: " Slabo 27px/13px",
+sans-serif;
 $font-size-base: 0.9rem;
-$line-height-base: 1.6;
-
+$line-height-base: 1.3;
+$font-size-base: 0.9rem;
 // Colors
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66D9b;
-$red: #e3342f;
+$red: #ff0800ca;
 $orange: #f6993f;
 $yellow: #ffed4a;
-$green: #38c172;
+$green: #05ff6dd2;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
