--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -11,9 +11,9 @@ $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66D9b;
-$red: #ff0800ca;
+$red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
-$green: #05ff6dd2;
+$green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
